--- a/configs/fudetr/fudetr_r50vd_6x_coco.yml
+++ b/configs/fudetr/fudetr_r50vd_6x_coco.yml
@@ -4,11 +4,11 @@ __include__: [
   '../runtime.yml',
   './include/dataloader.yml',
   './include/optimizer.yml',
-  './include/rtdetr_r50vd.yml',
+  './include/fudetr_r50vd.yml',
 ]
 
 
-output_dir: ./output/rtdetr_r18vd_6x_coco
+output_dir: ./output/speedydetr_r18vd_6x_coco
 
 PResNet:
   depth: 18
@@ -27,7 +27,7 @@ HybridEncoder:
   expansion: 0.5
 
 
-RTDETRTransformer:
+FUDETRTransformer:
   eval_idx: -1
   num_decoder_layers: 3
   num_denoising: 100
